--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,83 @@
   font-weight: 400;
   font-style: normal;
 }
+
+/* shared style */
+.display-flex{
+  display: flex;
+}
+
+.text-gray{
+  color: #424242;
+}
+
+.text-light-gray{
+  color: #727272;
+}
+
+.bg-light{
+  background-color: rgba(255, 144, 14, 10%)
+}
+
+.btn-primary{
+  background-color: #FF900E;
+  color: white;
+  padding: 20px 25px;
+  font-size: 1.25rem;
+  font-weight: 600;
+  border: none;
+  border-radius: 8px;
+}
+/* header style */
+
+/* navbar related styles */
+
+.navbar{
+  justify-content: space-between;
+  align-items: center;
+}
+
+.brand{
+  font-weight: 700;
+  font-size: 3rem;
+}
+.nav-item{
+  list-style: none;
+  margin-right: 30px;
+}
+
+.nav-link{
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.navbar, .banner{
+  max-width: 1220px;
+  margin: 0 auto;
+}
+
+/* banner style */
+
+.banner-container{
+  max-width: 850px;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.banner-title{
+  font-weight: 700;
+  font-size: 4rem;
+}
+
+.banner-img{
+  width: 100%; 
+}
+
+/* responsive media query */
+
+@media screen and (max-width: 576px) {
+  .navbar,
+  .nav-item{
+    flex-direction: column;
+  }
+}
