--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,9 @@
   color: #424242;
 }
 
+.text-primary{
+  color: #FF900E;
+}
 .text-light-gray{
   color: #727272;
 }
@@ -33,6 +36,21 @@
   font-weight: 600;
   border: none;
   border-radius: 8px;
+}
+
+/* main */
+main {
+  max-width: 1220px;
+  margin: 0 auto;
+}
+
+main > section {
+  margin-top: 130px;
+}
+
+.section-title{
+  font-size: 2.8rem;
+  font-weight: 700;
 }
 /* header style */
 
@@ -79,11 +97,63 @@
   width: 100%; 
 }
 
+
+/* team and feature related styles */
+.teams{
+  align-items: center;
+}
+
+.team-img-container{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 24px;
+}
+
+.our-features{
+  margin-left: 130px;
+  max-width: 530px;
+}
+
+#quick-list{
+  font-weight: 500;
+}
+
+/* features section related styles */
+
+.features{
+  gap: 140px;
+}
+
+
+
+
+
+
 /* responsive media query */
 
 @media screen and (max-width: 576px) {
   .navbar,
-  .nav-item{
+  .nav-links,
+  .teams{
     flex-direction: column;
+  }
+  .team-img-container{
+    grid-template-columns: 1fr;
+  }
+  
+  .our-features{
+    margin-left: 20px;
+  }
+}
+
+/* medium size device */
+
+@media screen and (min-width: 576px) and (max-width: 992px) {
+  .teams{
+    flex-direction: column;
+  }
+  
+  .our-features{
+    margin: 50px auto;
   }
 }
