--- a/css/style.css
+++ b/css/style.css
@@ -119,13 +119,54 @@ main > section {
 }
 
 /* features section related styles */
+.facts-container{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+.fact-card{
+  border: 1px solid #FF900E;
+  border-radius: 8px;
+  width: 240px;
+  height: 240px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.fact-number{
+  font-size: 2.8rem;
+  font-weight: 600;
+  margin-top: 5px;
+  margin-bottom: -25px;
+}
 
+.fact-name{
+  font-size: 1.25rem;
+  font-weight: 600;
+}
+
+.fact-discription{
+  max-width: 540px;
+}
 .features{
   gap: 140px;
 }
 
+/* sponsors section */
+.sponsor-info{
+  max-width: 540px;
+  margin: 50px auto;
+  text-align: center;
+}
 
+.sponsors-company{
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+}
 
+.sponsors-company img{
+    filter: grayscale(100%);
+}
 
 
 
@@ -137,14 +178,21 @@ main > section {
   .teams{
     flex-direction: column;
   }
-  .team-img-container{
+  .team-img-container,
+    .facts-container,
+    .sponsors-company{
     grid-template-columns: 1fr;
   }
   
+    .facts-container, .sponsors-company{
+      justify-items: center;
+      gap: 24px;
+    }
   .our-features{
     margin-left: 20px;
   }
 }
+
 
 /* medium size device */
 
@@ -156,4 +204,17 @@ main > section {
   .our-features{
     margin: 50px auto;
   }
+
+   .facts-container,
+        .sponsors-company{
+          grid-template-columns: repeat(2, 1fr);
+          justify-items: center;
+          gap: 50px;
+        }
+
+        .some-fact-info{
+          display: flex;
+          align-items: center;
+          flex-direction: column;
+        }
 }
