--- a/css/style.css
+++ b/css/style.css
@@ -9,26 +9,27 @@
 }
 
 /* shared style */
-.display-flex{
+.display-flex {
   display: flex;
 }
 
-.text-gray{
+.text-gray {
   color: #424242;
 }
 
-.text-primary{
+.text-primary {
   color: #FF900E;
 }
-.text-light-gray{
+
+.text-light-gray {
   color: #727272;
 }
 
-.bg-light{
+.bg-light {
   background-color: rgba(255, 144, 14, 10%)
 }
 
-.btn-primary{
+.btn-primary {
   background-color: #FF900E;
   color: white;
   padding: 20px 25px;
@@ -44,86 +45,113 @@ main {
   margin: 0 auto;
 }
 
-main > section {
+main>section {
   margin-top: 130px;
 }
 
-.section-title{
+.section-title {
   font-size: 2.8rem;
   font-weight: 700;
 }
+
 /* header style */
 
 /* navbar related styles */
 
-.navbar{
+.navbar {
   justify-content: space-between;
   align-items: center;
 }
 
-.brand{
+.brand {
   font-weight: 700;
   font-size: 3rem;
 }
-.nav-item{
+
+.nav-item {
   list-style: none;
   margin-right: 30px;
 }
 
-.nav-link{
+.nav-link {
   text-decoration: none;
   font-weight: 500;
 }
 
-.navbar, .banner{
+.navbar,
+.banner {
   max-width: 1220px;
   margin: 0 auto;
 }
 
 /* banner style */
 
-.banner-container{
+.banner-container {
   max-width: 850px;
   margin: 0 auto;
   text-align: center;
   margin-bottom: 50px;
 }
-.banner-title{
+
+.banner-title {
   font-weight: 700;
   font-size: 4rem;
 }
 
-.banner-img{
-  width: 100%; 
+.banner-img {
+  width: 100%;
 }
 
 
 /* team and feature related styles */
-.teams{
+.teams {
   align-items: center;
 }
 
-.team-img-container{
+.team-img-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 24px;
 }
 
-.our-features{
+.our-features {
   margin-left: 130px;
   max-width: 530px;
 }
 
-#quick-list{
+#quick-list {
   font-weight: 500;
 }
 
+/* features section style */
+
+#feature-section-title {
+  border-left: 5px solid #FF900E;
+  padding-left: 21px;
+}
+
+.feature-card {
+  padding: 30px;
+  box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+  margin-bottom: 20px;
+  border-radius: 8px;
+}
+
+.feature-card .feature-title {
+  font-weight: 600;
+  font-size: 1.25rem;
+  margin-top: -10px;
+  margin-bottom: -10px;
+}
+
+
 /* features section related styles */
-.facts-container{
+.facts-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
 }
-.fact-card{
+
+.fact-card {
   border: 1px solid #FF900E;
   border-radius: 8px;
   width: 240px;
@@ -133,39 +161,57 @@ main > section {
   justify-content: center;
   flex-direction: column;
 }
-.fact-number{
+
+.fact-number {
   font-size: 2.8rem;
   font-weight: 600;
   margin-top: 5px;
   margin-bottom: -25px;
 }
 
-.fact-name{
+.fact-name {
   font-size: 1.25rem;
   font-weight: 600;
 }
 
-.fact-discription{
+.fact-discription {
   max-width: 540px;
 }
-.features{
-  gap: 140px;
+
+.features {
+  gap: 100px;
 }
 
+#experience-badge{
+  padding: 45px 20px;
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-left: -60px;
+  margin-top: -100px;
+}
+
+#experience-year{
+  font-size: 4rem;
+  font-weight: 700;
+}
+
+.featured-architect img{
+  width: 100%;
+}
 /* sponsors section */
-.sponsor-info{
+.sponsor-info {
   max-width: 540px;
   margin: 50px auto;
   text-align: center;
 }
 
-.sponsors-company{
+.sponsors-company {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
 }
 
-.sponsors-company img{
-    filter: grayscale(100%);
+.sponsors-company img {
+  filter: grayscale(100%);
 }
 
 
@@ -173,48 +219,64 @@ main > section {
 /* responsive media query */
 
 @media screen and (max-width: 576px) {
+
   .navbar,
   .nav-links,
-  .teams{
+  .teams,
+  .features {
     flex-direction: column;
   }
+
   .team-img-container,
-    .facts-container,
-    .sponsors-company{
+  .facts-container,
+  .sponsors-company {
     grid-template-columns: 1fr;
   }
-  
-    .facts-container, .sponsors-company{
-      justify-items: center;
-      gap: 24px;
-    }
-  .our-features{
+
+  .facts-container,
+  .sponsors-company {
+    justify-items: center;
+    gap: 24px;
+  }
+
+  .our-features {
     margin-left: 20px;
   }
+
+    #experience-badge{
+      margin-top: 20px;
+      margin-left: 20px;
+    }
 }
 
 
 /* medium size device */
 
 @media screen and (min-width: 576px) and (max-width: 992px) {
-  .teams{
+  .teams,
+  .features {
     flex-direction: column;
   }
-  
-  .our-features{
+
+  .our-features {
     margin: 50px auto;
   }
 
-   .facts-container,
-        .sponsors-company{
-          grid-template-columns: repeat(2, 1fr);
-          justify-items: center;
-          gap: 50px;
-        }
+  .facts-container,
+  .sponsors-company {
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+    gap: 50px;
+  }
 
-        .some-fact-info{
-          display: flex;
-          align-items: center;
-          flex-direction: column;
-        }
+  .some-fact-info {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+
+            #experience-badge {
+              margin-top: 20px;
+              margin-left: 20px;
+            }
 }
